--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/image/cardBg.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PokeDex - ohm</title>
+    <title>PokeDex - ver2</title>
   </head>
   <body>
     <div id="root"></div>
